# Local-Dev-Agent-Desktop

./: .gitignore  AGENT.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md
.agent/rag/cache/02a864ba1ef51ecea786f5353e52642c01dbc5ce8f7218f8aca9b72d86147013/: chunks.jsonl  document.txt  meta.json  source.json
.agent/rag/cache/04023f34a7900b98e7c0e45acdf6fd52fdd288edceba56bd0b52bd2318838a6e/: chunks.jsonl  document.txt  meta.json  source.json
.agent/rag/cache/05c724ac8cbab692441367463aa1115f056a6ba0432bbc9cae2f346adfd67a47/: chunks.jsonl  document.txt  meta.json  source.json
.agent/rag/cache/060b0780bced89b2855c13e123434334d0fc942d204ddff73890daef5c99b1fe/: chunks.jsonl  document.txt  meta.json  source.json
.agent/rag/cache/095cfb68a25757fbe99dc7e41a5d7c380bc3ea1d867417699691c2973bcd27fd/: chunks.jsonl  document.txt  meta.json  (+1 more)
.agent/skills/: coding-execution.md  create-cmake-project.md  generate-tests.md  research-project.md  review-and-fix-build.md  scaffold-api.md  writing-chapter.md
docs/: ADR-0001-stabilize-core-before-expanding-integrations.md  ADR-0002-adaptive-execution-and-persistent-artifacts.md  CODEX_LIKE_UX_ROADMAP.md  EDITING_FLOW_MIGRATION_PLAN.md  STABILIZATION_CHECKLIST.md
include/: AgentUI.hpp  NativeTools.hpp  OllamaClient.hpp  Orchestrator.hpp  ToolRegistry.hpp
scripts/: build.sh
src/: AgentUI.cpp  AgentUI_Chat.cpp  AgentUI_Explorer.cpp  AgentUI_Internal.hpp  AgentUI_Modals.cpp  AgentUI_Persistence.cpp  AgentUI_Stats.cpp  NativeTools.cpp  OllamaClient.cpp  Orchestrator.cpp  ToolRegistry.cpp  main.cpp
(+503 files in other folders)
